<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Account Passwords</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="newString">New</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="account">Account</string>
    <string name="userid">User ID:</string>
    <string name="password">Password:</string>
    <string name="enter">Save Changes</string>
    <string name="cancel">Cancel</string>

</resources>
