<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/account"
	        android:textSize="20sp" />
	    <EditText
	        android:id="@+id/account"
	        android:nextFocusDown="@+id/userid"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="20"
	        android:inputType="text" >
	    </EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/userid"
	        android:textSize="20sp" />
	    <EditText
	        android:id="@+id/userid"
	        android:nextFocusDown="@+id/password"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="20"
	        android:inputType="text" >
	    </EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/password"
	        android:textSize="20sp" />
	    <EditText
	        android:id="@+id/password"
	        android:nextFocusDown="@+id/enter"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="20"
	        android:inputType="text"
	        android:imeOptions="actionDone" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <Button android:id="@+id/enter"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:text="@string/save"
	        android:textSize="20sp" />
	    <Button android:id="@+id/cancel"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:text="@string/cancel"
	        android:textSize="20sp" />
	</LinearLayout>

</LinearLayout>