<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <Button android:id="@+id/refreshBtn"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/refresh"
	        android:textSize="20sp"
	        android:onClick="onClickCallback" />
	    <Button android:id="@+id/newBtn"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/newString"
	        android:textSize="20sp"
	        android:onClick="onClickCallback" />
	    <Button android:id="@+id/saveBtn"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/save"
	        android:textSize="20sp"
	        android:onClick="onClickCallback" />
	</LinearLayout>
	<View android:layout_width="fill_parent"
       android:layout_height="3dp"
       android:background="@android:color/black"/>
	<ListView android:id="@+id/passwordDataList"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
<!--     <ExpandableListView android:id="@+id/passwordDataList" -->
<!--                         android:layout_width="fill_parent" -->
<!--                         android:layout_height="fill_parent" -->
<!--                         android:transcriptMode="alwaysScroll" -->
<!--                         android:cacheColorHint="#00000000" -->
<!--                         android:listSelector="@android:color/transparent"/> -->

</LinearLayout>
